[package]
name = "plotters-iced"
version = "0.11.0"
description = "Iced backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2021"
resolver = "2"
homepage = "https://github.com/Joylei/plotters-iced"
repository = "https://github.com/Joylei/plotters-iced.git"
documentation = "https://docs.rs/crate/plotters-iced/"
keywords = ["plotters", "chart", "plot", "iced", "backend"]
categories = ["visualization"]
authors = ["Joylei <leingliu@gmail.com>"]

[workspace]
members = [".", "examples/split-chart"]

[workspace.dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "tokio",
    "markdown",
    "canvas",
    "debug",
    "lazy",
    "highlighter",
    "advanced",
    "svg",
    "wgpu",
    "qr_code",
    "image",
    "web-colors",
] }

[dependencies]
iced = { workspace = true }
plotters = { version = "0.3", default-features = false }
plotters-backend = "0.3"
once_cell = "1"


[dev-dependencies]
plotters = { version = "0.3", default-features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
chrono = { version = "0.4", default-features = false }
rand = "0.8"
tokio = { version = "1", features = ["rt"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sysinfo = { version = "0.30", default-features = false }

[patch.crates-io]
iced = { git = "https://github.com/airstrike/iced.git", branch = "master" }
